correct filter list on Portfolio with gap

--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -478,52 +478,48 @@ h3 {
   margin: -1px;
 }
 
+.portfolio-container {
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
 .filter-list {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
-  -webkit-box-pack: left;
-      -ms-flex-pack: left;
-          justify-content: left;
+  -webkit-column-gap: 8px;
+     -moz-column-gap: 8px;
+          column-gap: 8px;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  margin-bottom: 40px;
+}
+@media screen and (max-width: 767px) {
+  .filter-list {
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    row-gap: 15px;
+    -webkit-box-pack: left;
+        -ms-flex-pack: left;
+            justify-content: left;
+    margin-bottom: 40px;
+  }
 }
 @media screen and (min-width: 768px) {
   .filter-list {
-    min-width: 611px;
-    -ms-flex-wrap: nowrap;
-        flex-wrap: nowrap;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
     margin-bottom: 30px;
   }
 }
 @media screen and (min-width: 1200px) {
   .filter-list {
     margin-bottom: 50px;
-  }
-}
-
-.filter-list__item {
-  margin-bottom: 15px;
-}
-.filter-list__item:not(:last-child) {
-  margin-right: 8px;
-}
-.filter-list__item:nth-last-child(-n+2) {
-  margin-bottom: 0px;
-}
-@media screen and (min-width: 768px) {
-  .filter-list__item {
-    margin-bottom: 0px;
   }
 }
 
